--- a/mongle/src/main/resources/application.properties
+++ b/mongle/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=mongle
+spring.datasource.url=jdbc:mysql://localhost:3306/mongle_db?serverTimezone=Asia/Seoul&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=lsj24060606
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
